# yonokuni-ai

./: .gitignore  AGENT.md  ARCHITECTURE.md  PLAN.md  README.md  pyproject.toml  replay.json  requirements.txt  tensorboard_metrics.md
.agent/docs/: README.md  architecture.md  cli_tools.md  evaluation_and_gating.md  game_rules.md  inference_and_export.md  training_pipeline.md
.github/workflows/: evaluate-rule.yml  evaluate.yaml  gate.yml
configs/: self_play.yaml  self_play_long.yaml  self_play_windows_gpu.yaml
docs/: windows_gpu_training.md  windows_instruction.md
logs/long_run/: events.out.tfevents.1764208415.dhcp-128-189-202-246.ubcsecure.wireless.ubc.ca.37587.0
scripts/: evaluate_legacy.py  evaluate_model.py  gate_model.py  play_vs_ai.py  profile_iteration.py  run_iteration.py
tests/: test_env.py  test_evaluation.py  test_features.py  test_gating.py  test_inference.py  test_mcts.py  test_model.py  test_orchestration.py  test_play_vs_ai.py  test_replay_buffer.py  test_rules.py  test_self_play.py  test_training.py  test_validation.py
yonokuni/: __init__.py
yonokuni/core/: __init__.py  rules.py  state.py
yonokuni/env/: __init__.py  gym_env.py
yonokuni/evaluation/: __init__.py  gating.py  match.py
yonokuni/features/: __init__.py  observation.py  symmetry.py
yonokuni/mcts/: __init__.py  puct.py
yonokuni/models/: __init__.py  export.py  inference.py  network.py
yonokuni/orchestration/: __init__.py  loop.py
yonokuni/selfplay/: __init__.py  replay_buffer.py  self_play.py
yonokuni/training/: __init__.py  loop.py
yonokuni/validation/: __init__.py  (+1 more)
