[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "yonokuni-ai"
version = "0.1.0"
description = "AlphaZero-style training stack for the Yonokuni four-player board game."
authors = ["Yonokuni AI Team <team@yonokuni.local>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "yonokuni" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
gymnasium = "^0.29.1"
numpy = "^1.26.0"
torch = "^2.2.0"
rich = "^13.7.0"
hydra-core = "^1.3.2"
typing-extensions = "^4.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^24.3.0"
isort = "^5.13.0"
mypy = "^1.8.0"
ruff = "^0.1.15"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
extend-select = ["I"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
